--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,154 @@
 
         <div class="block-main">
           <div id="content">
+              <!-- BLOCK IMAGES-->
+            <div class="block-images row">
             
+              <div class="block-title text-center">
+                <h3>Our Latest Works </h3>
+                <p>Something descriptive about the studio and Charlie</p>
+              </div>
+              
+              <div class="block-item col-md-4  col-sm-4">
+                <div class="photo">
+                
+                  <div class="img-frame">
+                      <img src="http://placehold.it/400x266" alt="urbano 1">
+                      <div class="overlay-bg"></div>
+                      <div class="overlay-content">
+                        <div class="text">
+                         <%= link_to page_path('single') do %>
+                            <i class="fa fa-link"></i>
+                          <% end %>
+                          <a class="image-link" href="http://placehold.it/400x266"><i class="fa fa-search"></i></a>
+                        </div>
+                      </div>
+                  </div>
+                  
+                </div>
+                
+                
+                <h4> City with clouds </h4>
+                <p>This is a beautiful description</p>
+              </div>
+              
+              <div class="block-item col-md-4  col-sm-4">
+                <div class="photo">
+                
+                  <div class="img-frame">
+                      <img src="http://placehold.it/400x266" alt="urbano 2">
+                      <div class="overlay-bg"></div>
+                      <div class="overlay-content">
+                        <div class="text">
+                          <%= link_to page_path('single') do %>
+                            <i class="fa fa-link"></i>
+                          <% end %>
+                          <a class="image-link" href="http://placehold.it/400x266"><i class="fa fa-search"></i></a>
+                        </div>
+                      </div>
+                  </div>
+                  
+                </div>
+                
+                
+                <h4> Walking the streets </h4>
+                <p>Let scape your imagination with those pictures</p>
+              </div>
+              
+              <div class="block-item col-md-4  col-sm-4">
+                <div class="photo">
+                
+                  <div class="img-frame">
+                      <img src="http://placehold.it/400x266" alt="urbano 3">
+                      <div class="overlay-bg"></div>
+                      <div class="overlay-content">
+                        <div class="text">
+                         <%= link_to page_path('single') do %>
+                            <i class="fa fa-link"></i>
+                          <% end %>
+                          <a class="image-link" href="http://placehold.it/400x266"><i class="fa fa-search"></i></a>
+                        </div>
+                      </div>
+                  </div>
+                  
+                </div>
+                
+                
+                <h4> Road to home </h4>
+                <p>Nothing compares with arrive at sweet home</p>
+              </div>
+                            <div class="block-item col-md-4  col-sm-4">
+                <div class="photo">
+                
+                  <div class="img-frame">
+                      <img src="http://placehold.it/400x266" alt="urbano 1">
+                      <div class="overlay-bg"></div>
+                      <div class="overlay-content">
+                        <div class="text">
+                         <%= link_to page_path('single') do %>
+                            <i class="fa fa-link"></i>
+                          <% end %>
+                          <a class="image-link" href="http://placehold.it/400x266"><i class="fa fa-search"></i></a>
+                        </div>
+                      </div>
+                  </div>
+                  
+                </div>
+                
+                
+                <h4> City with clouds </h4>
+                <p>This is a beautiful description</p>
+              </div>
+              
+              <div class="block-item col-md-4  col-sm-4">
+                <div class="photo">
+                
+                  <div class="img-frame">
+                      <img src="http://placehold.it/400x266" alt="urbano 2">
+                      <div class="overlay-bg"></div>
+                      <div class="overlay-content">
+                        <div class="text">
+                         <%= link_to page_path('single') do %>
+                            <i class="fa fa-link"></i>
+                          <% end %>
+                          <a class="image-link" href="http://placehold.it/400x266"><i class="fa fa-search"></i></a>
+                        </div>
+                      </div>
+                  </div>
+                  
+                </div>
+                
+                
+                <h4> Walking the streets </h4>
+                <p>Let scape your imagination with those pictures</p>
+              </div>
+              
+              <div class="block-item col-md-4  col-sm-4">
+                <div class="photo">
+                
+                  <div class="img-frame">
+                      <img src="http://placehold.it/400x266" alt="urbano 3">
+                      <div class="overlay-bg"></div>
+                      <div class="overlay-content">
+                        <div class="text">
+                          <%= link_to page_path('single') do %>
+                            <i class="fa fa-link"></i>
+                          <% end %>
+                          <a class="image-link" href="http://placehold.it/400x266"><i class="fa fa-search"></i></a>
+                        </div>
+                      </div>
+                  </div>
+                  
+                </div>
+                
+                
+                <h4> Road to home </h4>
+                <p>Nothing compares with arrive at sweet home</p>
+              </div>
+
+            </div>
+            <!-- /BLOCK IMAGES-->
+
             <!-- BLOCK FEATURES-->
             <div class="features-p row">
               <div class="col-md-4">
@@ -30,79 +177,7 @@
             </div>
             <!-- /BLOCK FEATURES-->
             
-            <!-- BLOCK IMAGES-->
-            <div class="block-images row">
-            
-              <div class="block-title text-center">
-                <h3>Charlie Bullock Art Studios </h3>
-                <p>Something descriptive about the studio and Charlie</p>
-              </div>
-              
-              <div class="block-item col-md-4  col-sm-4">
-                <div class="photo">
-                
-                  <div class="img-frame">
-                      <img src="http://placehold.it/400x266" alt="urbano 1">
-                      <div class="overlay-bg"></div>
-                      <div class="overlay-content">
-                        <div class="text">
-                          <a href="portfolio-single.html"><i class="fa fa-link"></i></a>
-                          <a class="image-link" href="http://placehold.it/400x266"><i class="fa fa-search"></i></a>
-                        </div>
-                      </div>
-                  </div>
-                  
-                </div>
-                
-                
-                <h4> City with clouds </h4>
-                <p>This is a beautiful description</p>
-              </div>
-              
-              <div class="block-item col-md-4  col-sm-4">
-                <div class="photo">
-                
-                  <div class="img-frame">
-                      <img src="http://placehold.it/400x266" alt="urbano 2">
-                      <div class="overlay-bg"></div>
-                      <div class="overlay-content">
-                        <div class="text">
-                          <a href="portfolio-single.html"><i class="fa fa-link"></i></a>
-                          <a class="image-link" href="http://placehold.it/400x266"><i class="fa fa-search"></i></a>
-                        </div>
-                      </div>
-                  </div>
-                  
-                </div>
-                
-                
-                <h4> Walking the streets </h4>
-                <p>Let scape your imagination with those pictures</p>
-              </div>
-              
-              <div class="block-item col-md-4  col-sm-4">
-                <div class="photo">
-                
-                  <div class="img-frame">
-                      <img src="http://placehold.it/400x266" alt="urbano 3">
-                      <div class="overlay-bg"></div>
-                      <div class="overlay-content">
-                        <div class="text">
-                          <a href="portfolio-single.html"><i class="fa fa-link"></i></a>
-                          <a class="image-link" href="http://placehold.it/400x266"><i class="fa fa-search"></i></a>
-                        </div>
-                      </div>
-                  </div>
-                  
-                </div>
-                
-                
-                <h4> Road to home </h4>
-                <p>Nothing compares with arrive at sweet home</p>
-              </div>
-
-            </div>
-            <!-- /BLOCK IMAGES-->
+          
             
          
             
