--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,9 +23,9 @@
                       <div class="overlay-content">
                         <div class="text">
                          <%= link_to page_path('single') do %>
-                            <i class="fa fa-link"></i>
+                            <i class="fa fa-search"></i>
                           <% end %>
-                          <a class="image-link" href="http://placehold.it/400x266"><i class="fa fa-search"></i></a>
+                         
                         </div>
                       </div>
                   </div>
@@ -46,9 +46,8 @@
                       <div class="overlay-content">
                         <div class="text">
                           <%= link_to page_path('single') do %>
-                            <i class="fa fa-link"></i>
+                            <i class="fa fa-search"></i>
                           <% end %>
-                          <a class="image-link" href="http://placehold.it/400x266"><i class="fa fa-search"></i></a>
                         </div>
                       </div>
                   </div>
@@ -69,9 +68,8 @@
                       <div class="overlay-content">
                         <div class="text">
                          <%= link_to page_path('single') do %>
-                            <i class="fa fa-link"></i>
+                            <i class="fa fa-search"></i>
                           <% end %>
-                          <a class="image-link" href="http://placehold.it/400x266"><i class="fa fa-search"></i></a>
                         </div>
                       </div>
                   </div>
@@ -91,9 +89,8 @@
                       <div class="overlay-content">
                         <div class="text">
                          <%= link_to page_path('single') do %>
-                            <i class="fa fa-link"></i>
+                            <i class="fa fa-search"></i>
                           <% end %>
-                          <a class="image-link" href="http://placehold.it/400x266"><i class="fa fa-search"></i></a>
                         </div>
                       </div>
                   </div>
@@ -114,9 +111,8 @@
                       <div class="overlay-content">
                         <div class="text">
                          <%= link_to page_path('single') do %>
-                            <i class="fa fa-link"></i>
+                            <i class="fa fa-search"></i>
                           <% end %>
-                          <a class="image-link" href="http://placehold.it/400x266"><i class="fa fa-search"></i></a>
                         </div>
                       </div>
                   </div>
@@ -137,9 +133,8 @@
                       <div class="overlay-content">
                         <div class="text">
                           <%= link_to page_path('single') do %>
-                            <i class="fa fa-link"></i>
+                            <i class="fa fa-search"></i>
                           <% end %>
-                          <a class="image-link" href="http://placehold.it/400x266"><i class="fa fa-search"></i></a>
                         </div>
                       </div>
                   </div>
