--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,9 +37,9 @@
           <div class="navbar-collapse collapse">
             <ul id="menu" class="nav navbar-nav text-center">
 
-              <li class="active"><%= link_to "Home", root_url %></li>
-              <li class="active"><%= link_to "About", page_path('about') %></li>
-              <li class="active"><%= link_to "Contact", page_path('contact') %></li>
+              <li><%= link_to "Home", root_url %></li>
+              <li><%= link_to "About", page_path('about') %></li>
+              <li><%= link_to "Contact", page_path('contact') %></li>
         
             </ul>
                       
