--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
             <ul id="menu" class="nav navbar-nav text-center">
 
               <li><%= link_to "Home", root_url %></li>
+              <li><%= link_to "Works", works_url %></li>
               <li><%= link_to "About", page_path('about') %></li>
               <li><%= link_to "Contact", page_path('contact') %></li>
         
