--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,31 +14,34 @@
                 <p>Something descriptive about the studio and Charlie</p>
               </div>
               
-              <%  latest_images.each do |image| %>
-              <div class="block-item col-md-4  col-sm-4">
-                <div class="photo">
-                
-                  <div class="img-frame">
-                       <%= image_tag image.file.url(:medium) %>
-                      <div class="overlay-bg"></div>
-                      <div class="overlay-content">
-                        <div class="text">
-                         <%= link_to work_url(image) do %>
-                            <i class="fa fa-search"></i>
-                          <% end %>
-                         
-                        </div>
+              <%  latest_images.in_groups_of(4) do |group| %>
+              <div class="row">
+                <% group.each do |image| %>
+                  <div class="block-item col-md-4  col-sm-4">
+                    <div class="photo">
+                    
+                      <div class="img-frame">
+                           <%= image_tag image.file.url(:medium) %>
+                          <div class="overlay-bg"></div>
+                          <div class="overlay-content">
+                            <div class="text">
+                             <%= link_to work_url(image) do %>
+                                <i class="fa fa-search"></i>
+                              <% end %>
+                             
+                            </div>
+                          </div>
                       </div>
+                      
+                    </div>
+                    
+                    
+                    <h4> <%= image.title %> </h4>
+                    <p> <%= image.description %></p>
                   </div>
-                  
-                </div>
-                
-                
-                <h4> <%= image.title %> </h4>
-                <p> <%= image.description %></p>
-              </div>
-
+                  <% end %>
               <% end %>
+            </div>
               
           
 
