--- a/app/assets/stylesheets/style.css.erb
+++ b/app/assets/stylesheets/style.css.erb
@@ -580,6 +580,9 @@ i {
 .block-item {
   margin-bottom: 15px;
 }
+.image-footer{
+  min-height: 50px;
+}
 @media (min-width: 767px) and (max-width: 992px) {
   .block-item {
     min-height: 215px;
