fix address and phone

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,8 +75,8 @@
               <div>
                 <ul class="contact">
                 <li><span class="glyphicon glyphicon-map-marker"></span>  120 E. Larkin, Athens, Texas, 75751</li>
-                <li><span class="glyphicon glyphicon-phone-alt"></span>     903-555-1212 </li>
-                <li><span class="glyphicon glyphicon-envelope"></span>   charliebullock@gmail.com</li>
+                <li><span class="glyphicon glyphicon-phone-alt"></span>     903-780-2624 </li>
+                <li><span class="glyphicon glyphicon-envelope"></span>   charliebullocktx@gmail.com</li>
                 </ul>
               </div>
               
@@ -104,7 +104,7 @@
           <div id="credit">
             <ul>
                 <li>© 2014 Charlie Bullock Art Studio. All Rights Reserved</li>
-              <li>Design By Optimus Labs</li>
+              <li>Design By Optimus Labs <a href="http://getoptimus.com">Get Optimus</a> </li>
               
             </ul>
           </div>
