--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -30,15 +30,15 @@
 									<div class="contact-box spacer-bottom">
 									<h4 class="opensans">Contact Info</h4>
 									<div class="address">
-											<p>30 South Park Avenue<br>
-											San Francisco, CA 94108<br>
+											<p>120 E. Larkin<br>
+											Athens, Texas, 75751<br>
 											USA</p>
 										</div>
 										<div class="contact-info">
-										<p><b>Phone:</b> (123) 456-7890<br>
-										<b>Fax:</b> +08 (123) 456-7890<br>
-										<b>Email:</b> contact@companyname.com<br>
-										<b>Web:</b> companyname.com</p>
+										<p><b>Phone:</b> 903-780-2624 <br>
+				
+										<b>Email:</b> charliebullocktx@gmail.com<br>
+										<b>Web:</b> http://www.charliebullock.me</p>
 										</div>
 									</div>
 								</div>
@@ -47,30 +47,7 @@
 							
 								<div class="col-md-9 col-sm-9">
 									
-                  <div class="input-comment">
-                    <div class="row">
-                      <div class="col-md-12"><h4 class="opensans">Lets Get In Touch!</h4></div>
-                      <div class="col-xs-4">
-                      <h6 class="opensans"><b>Name</b> (required)</h6>
-                      <input type="text" class="form-control" placeholder="Username">
-                      </div>
-                      <div class="col-xs-4">
-                      <h6 class="opensans"><b>E-mail</b> (required)</h6>
-                      <input type="text" class="form-control" placeholder="User@domain.net">
-                      </div>
-                      <div class="col-xs-4">
-                      <h6 class="opensans"><b>Website</b></h6>
-                      <input type="text" class="form-control" placeholder="Site URL">
-                      </div>
-                     </div>
-                     <div class="row spacer">
-                      <div class="col-xs-12">
-                      <h6 class="opensans"><b>Comment</b> (required)</h6>
-                      <textarea class="form-control" rows="3" placeholder="Message"></textarea>
-                      <a href="javascript:;" class="flat-button-sm spacer-xs"> SUBMIT</a>
-                      </div>
-                    </div>
-                  </div>
+               
 
 								</div>
 
