--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -24,21 +24,20 @@
 
 								<div class="col-md-8 col-sm-8">
 										<h4>Who Is Charlie Bullock?</h4>
-										<p>Integer eu euismod sem. Fusce eleifend aliquam arcu, eget ullamcorper diam auctor sed. Vivamus pulvinar venenatis mattis. Fusce sit amet nulla gravida odio bibendum mollis eu sit amet tortor. Nam risus magna, tempus vitae leo eget, venenatis feugiat tortor. Nam hendrerit viverra ornare.Sed vitae enim vulputate orci commodo semper. Sed accumsan tincidunt lacus nec consequat. Quisque rutrum dui quis odio ornare porta. Duis justo dolor, tempor quis adipiscing sit amet, mollis id sem.</p>
+										<p>“Art’s a luxury,” Charlie Bullock says.  Who would know better than an artist like Charlie, who everyday waits patiently for any of us to decide that we crave such an indulgence?
+										<P>
+										Of course, he is talking for us non-artists.  For himself, art is as much a necessity as eating.  He picks up a paintbrush with the same accuracy as the rest of us would a fork or a telephone.  He will paint, draw, or sculpt on just about any material, and if a wall is what today’s canvas might be, then so be it.  His eye is his inspiration, and whatever is handy is the preferred material.  Charlie usually paints in series.  He will get into a groove on one subject, and stay with that for some time.  Charlie spent time in San Miguel, Mexico, and then South Texas painting Mexican street scenes, ranch hands, and cowboys at work.  During his 35 years as an artist, he has lived in places like Sedona, AZ, Santa Fe, NM, Durango, CO, and Fredericksburg, TX.  He associates himself with the western art themes that are so prominent in this part of the country.  Charlie has studied with Howard Terpning and Jack Swanson, who are members of the Cowboy Artists of America.  He has been accepted into numerous juried shows and workshops.  He also studied under notable portrait artist Dimitri Vail, and nationally-recognized landscape painter Bruce Peil.
+										</P>
 
-										<h4>More Info</h4>
-										<p>Integer eu euismod sem. Fusce eleifend aliquam arcu, eget ullamcorper diam auctor sed. Vivamus pulvinar venenatis mattis. Fusce sit amet nulla gravida odio bibendum mollis eu sit amet tortor. Nam risus magna, tempus vitae leo eget, venenatis feugiat tortor. Nam hendrerit viverra ornare.Sed vitae enim vulputate orci commodo semper. Sed accumsan tincidunt lacus nec consequat. Quisque rutrum dui quis odio ornare porta. Duis justo dolor, tempor quis adipiscing sit amet, mollis id sem.</p>
+										<P>
+										Charlie obtained his Bachelor of Fine Arts in 2002 from University of Texas Tyler.  During that time, we were all still reeling from the events of 9-11.  His artwork was directly affected by the 9-11 tragedy, and became a more expressive style.  The focus of his work then became about that event in history.  The art pieces were colorful, loose mixed media collages that were not so representational as past works.  For many years, his art has been a realistic portrayal of what he could see, but the art expression is much more than that.
+										</p>
 
-										<h4>Something Else</h4>
-										<p>Integer eu euismod sem. Fusce eleifend aliquam arcu, eget ullamcorper diam auctor sed. Vivamus pulvinar venenatis mattis. Fusce sit amet nulla gravida odio bibendum mollis eu sit amet tortor. Nam risus magna, tempus vitae leo eget, venenatis feugiat tortor. Nam hendrerit viverra ornare.Sed vitae enim vulputate orci commodo semper. Sed accumsan tincidunt lacus nec consequat. Quisque rutrum dui quis odio ornare porta. Duis justo dolor, tempor quis adipiscing sit amet, mollis id sem.</p>
 								</div>
 								<div class="col-md-4 col-sm-4">
 									<h4>Our Mission</h4>
 										<ul class="fa-ul-mrg">
-											 <li><i class="fa-li fa fa-flag"></i>List icons (like these)</li>
-											 <li><i class="fa-li fa fa-star"></i>can be used</li>
-											 <li><i class="fa-li fa fa-heart"></i>to replace</li>
-											 <li><i class="fa-li fa fa-globe"></i>default bullets in lists</li>
+											
 										</ul>
 								</div>
 							</div>
