--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -105,6 +105,15 @@
             <ul>
                 <li>© 2014 Charlie Bullock Art Studio. All Rights Reserved</li>
               <li>Design By Optimus Labs <a href="http://getoptimus.com">Get Optimus</a> </li>
+              <% if signed_in? %>
+                <li><%= link_to('Edit registration', edit_user_registration_path) %></li>
+                <li>
+                 <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+                </li>
+                <% else %>
+                <li><%= link_to('Sign In', new_user_session_path)  %> </li>
+                <li><%= link_to('Register', new_user_registration_path)  %> </li>
+                <% end %>
               
             </ul>
           </div>
