--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -25,7 +25,13 @@
               </div>
             
               <!--Photos-->
-              
+              <div class="text-center">
+              <% if user_signed_in? %>
+                  <% if current_user.has_role? :admin %>
+                    <h3><%= link_to "Add Work", new_work_path %></h3>
+                  <% end %>
+              <% end%>
+              </div>
               <div id="grid">
               
               <% @works.in_groups_of(4) do |group| %>
@@ -48,7 +54,12 @@
                       </div>
                       <div class="image-footer">
                         <h4> <%= work.title %> </h4>
-                        <p><%= work.description %></p>
+                        <% if user_signed_in? %>
+                          <% if current_user.has_role? :admin %>
+                            <h5><%= link_to "Edit", edit_work_path(work) %> | <%= link_to "Delete", work_path(work), method: :delete, data: { confirm: 'Are you certain you want to delete this?' } %></h5> 
+                            <p><%= work.description %></p>
+                          <% end %>
+                        <% end %>
                       </div>
                     </div>
                   <% end %>
